    of GPG output (Closes: #525670)
  * licensecheck: Skip empty files instead of reporting that they don't
    have a copyright (Closes: #535337)
  * nmudiff: Use 'bts select' to test, weither a check already has a patch
    tag set or not and only set it, if not (Closes: #519678)
  * Add a script listing to devscripts.1 which is auto-generated from
    debian/control (Closes: #504008)

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Tue, 21 Jul 2009 17:25:40 +0200

devscripts (2.10.52) unstable; urgency=low

  * debdiff: Make --diffstat work again; accidentally broken in 2.10.48.
  * uupdate: Fix invocation of *cat when attempting to apply diffs.
    Thanks, Yannick Roehlly.  (Closes: #533415)
  * debian/control: Update Standards-Version to 3.8.2 (no changes needed)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Wed, 17 Jun 2009 19:39:33 +0100

devscripts (2.10.51) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts:
    + Add a note to the description of --smtp-server explaining that
      reportbug.debian.org does not support relaying and is therefore not a
      suitable server to use in circumstances where $package@packages.d.o
      may be automatically Cced.
    + Ignore the --{force-,}interactive options when combined with -n.
      (Closes: #531422)
  * checkbashisms:
    + Detect shellscript wrappers that use "then" or "else" before calling
      exec.  Thanks, Raphael Geissert.  (Closes: #530815)
    + Fix a false positive detection of ". $(foo bar)" as attempting to pass
      arguments to a sourced script.  Thanks, Raphael Geissert.
    + Detect use of passing arguments to a sourced script as part of a
      conditional statement.  Thanks, Raphael Geissert.
    + Correctly count the number of quotes in a line when detecting whether
      we are currently inside a "quoted block".  Thanks, Raphael Geissert.
      (Closes: #531247)
    + Do not check the contents of a dpatch.  The wrapper script always uses