@@ -37,8 +37,15 @@ devscripts (2.10.53) UNRELEASED; urgency=low
     tag set or not and only set it, if not (Closes: #519678)
   * Add a script listing to devscripts.1 which is auto-generated from
     debian/control (Closes: #504008)
+  * bts:
+    + Implement a --mutt parameter, which allows mails to be sended
+      using mutt.
+    + Implement a 'Done' command which creates a mail to
+      nnn-done@bugs.debian.org and defaults to sending the mail
+      interactive to encourage writing explanations, why the bug
+      was closed. (Closes: #482751)
 
- -- Patrick Schoenfeld <schoenfeld@debian.org>  Tue, 21 Jul 2009 17:25:40 +0200
+ -- Patrick Schoenfeld <schoenfeld@debian.org>  Wed, 22 Jul 2009 16:45:09 +0200
 
 devscripts (2.10.52) unstable; urgency=low
 
